[package]
name = "pfv-cli"
version = "0.1.0"
edition = "2021"
authors = ["Hazel Stagner"]
description = "A CLI tool for encoding PFV video files"
license = "MIT"
repository = "https://github.com/GlaireDaggers/pfv-cli"
exclude = ["*.png", "*.wav", "*.pfv", "/.vscode"]
categories = ["command-line-utilities", "multimedia::video", "multimedia::encoding"]
keywords = ["codec", "video", "av"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.6"
pfv-rs = "0.1.3"
wav = "1.0.0"
